--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,21 @@
 project(CxxFunctionBenchmark CXX)
 cmake_minimum_required(VERSION 3.2)
 
+if(NOT DEFINED CMAKE_CXX_STANDARD)
+    set(CMAKE_CXX_STANDARD 14)
+    message("setting CMAKE_CXX_STANDARD to ${CMAKE_CXX_STANDARD}")
+endif()
+
+if(NOT DEFINED CMAKE_CXX_EXTENSIONS)
+    set(CMAKE_CXX_EXTENSIONS OFF)
+    message("setting CMAKE_CXX_EXTENSIONS to ${CMAKE_CXX_EXTENSIONS}")
+endif()
+
+if(NOT DEFINED CMAKE_BUILD_TYPE OR NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+    message("setting CMAKE_BUILD_TYPE to ${CMAKE_BUILD_TYPE}")
+endif()
+
 if(CMAKE_SIZEOF_VOID_P MATCHES 8)
     set(PLATFORM 64)
 else()
