FastFunc need include_directories clugston_styled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ endif()
 
 option(SSVU "Include ssvu::FastFunc" OFF)
 if (SSVU)
+  include_directories(SYSTEM clugston_styled)
   add_definitions(-DADD_SSVU)
 endif()
 
